syntax = "proto3";

package vcassist.services.vcsmoodle.v1;

// ProvideUsernamePassword
message ProvideUsernamePasswordRequest {
  string student_id = 1;
  string username = 2;
  string password = 3;
}
message ProvideUsernamePasswordResponse {}

// GetStudentData
message Course {
  string name = 1;
  string lesson_plan = 2;
  string zoom_link = 3;
}
message GetStudentDataRequest {
  string student_id = 1;
}
message GetStudentDataResponse {
  repeated Course courses = 1;
}

service MoodleService {
  rpc ProvideUsernamePassword(ProvideUsernamePasswordRequest) returns (ProvideUsernamePasswordResponse);
  rpc GetStudentData(GetStudentDataRequest) returns (GetStudentDataResponse);
}
